--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,10 @@
   </head>
   <body>
     <app-root></app-root>
+    <!-- <script src="https://cdn.carbonads.com/carbon.js?serve=CK7D4KQE&placement=flowbitedesign"></script>
+    <script src="https://flowbite.com/docs/docs.js?v=3.1.2a"></script>
+    <script src="https://cdn.usefathom.com/script.js"></script>
+    <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script> -->
   </body>
 </html>
