--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="bg-purple-200 dark:bg-gray-800">
     <app-root></app-root>
     <!-- <script src="https://cdn.carbonads.com/carbon.js?serve=CK7D4KQE&placement=flowbitedesign"></script>
     <script src="https://flowbite.com/docs/docs.js?v=3.1.2a"></script>
